# sloth-zhuyin-linux

./: .gitignore  ARCHITECTURE.md  MIGRATION.md  MODEL_BENCHMARKS.md  README.en.md  README.md  README.zh-TW.md  RESEARCH-LLM-IME.md  RESEARCH.md  install.sh
.github/workflows/: ci.yml
android/: .gitignore  build-ggml.sh  build.gradle.kts  capture-demo-gif.sh  gradle.properties  gradlew  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
android/app/cpp/: jni_sloth.cpp  jni_slothing.cpp  onnx_decoder.cpp  onnx_decoder.h  session.h  slothe.cpp
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sloth/ime/: CandidateBar.kt  Core.kt  EnableActivity.kt  KeyboardView.kt  Skin.kt  SlothImeService.kt
android/app/src/main/java/com/slothing/ime/: CandidateBar.kt  Core.kt  EnableActivity.kt  KeyboardView.kt  Skin.kt  SlothingImeService.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/main/res/values-night/: colors.xml
android/app/src/main/res/xml/: method.xml
android/gradle/wrapper/: gradle-wrapper.properties
docs/: ARCH-REVIEW.md  COMPARISON.md  EVAL.md  GPT-IME-DESIGN.md  INTERACTION-REVIEW.md  IOS-PARITY-MOBILE.md  RELATED-WORK.md  SENIOR-KEYBOARD.md  THEME.md  UI-MATRIX.md  ZH-EN-MIXING.md
engine/common/: README.md  assoc.h  core.h  core_test.cpp  daemon.h  decoder.h  display.h  segment.h  zhuyin.h
engine/fcitx5-chewing/: CMakeLists.txt  org.fcitx.Fcitx5.Addon.Sloth.metainfo.xml.in  org.fcitx.Fcitx5.Addon.Slothing.metainfo.xml.in
engine/fcitx5-chewing/data/: CMakeLists.txt
engine/fcitx5-chewing/src/: CMakeLists.txt  eim.cpp  eim.h  segment.h  segment_test.cpp  sloth-addon.conf.in.in  sloth.conf.in  slothing-addon.conf.in.in  slothing.conf.in  zhuyin.h  zhuyin_keys_test.cpp  zhuyin_test.cpp
engine/ibus-sloth/: CMakeLists.txt  README.md  install.sh
engine/ibus-sloth/data/: sloth.xml.in
engine/ibus-sloth/src/: main.cpp
engine/ibus-sloth/test/: run-smoke.sh  smoke.cpp
engine/ibus-slothing/: CMakeLists.txt  README.md  install.sh
engine/ibus-slothing/data/: slothing.xml.in
engine/ibus-slothing/src/: main.cpp
engine/ibus-slothing/test/: run-smoke.sh  smoke.cpp
engine/slothd/: CMakeLists.txt  slothd.cpp  slothd_e.py  slothd_slothe.cpp  slothe.cpp  slothe.h
engine/slothe-wasm/: build.sh  slothe_wasm.cpp
engine/slothingd/: CMakeLists.txt  slothe.cpp  slothingd.cpp  slothingd_e.py  slothingd_slothe.cpp
eval/: README.md  build_reference_mspy.py  chewing_parity.py  harvest.c  heldout_corpus_c4.txt  make_testset.py  reference_heldout.tsv  reference_mspy.tsv  run_decode_eval.py  run_eval.py  testset.tsv  zh-en-mixing.tsv
eval/ui-parity/: README.md  chewing_trace.c  compare_core_web.py  compare_traces.py  core_trace.cpp  demo_trace.mjs
finetune/: README.md  gen_dataset.py  pull_corpus.py  train_lora.py
llm/: test_slothd.py  test_slothingd.py
model/: DESIGN-E.md  DESIGN.md  allin1_eval.py  augment_toneless.py  bert_convert.py  bert_kd_score.py  boox_measure.sh  build_assoc.py  build_continuation.py  build_corpus_big.py  build_mamba.sh  build_phonetic_table.py  build_phonetic_table_tw.py  build_ptok.py  build_tokenizer.py  common_words.py  cont_eval.py  distill_student.py  eval_arch.py  eval_slothe.py  eval_slothk.py  export_slothe_onnx.py  gate_g2pw.py  gdn50.sh  gdn_to_gguf.py  gdnhyb50.sh  gen_convert.py  gen_data.py  gguf_nexteval.py  gpt_ime_beameval.py  gpt_ime_candidates.py  gpt_ime_cdecode.py  gpt_ime_eval.py  gpt_ime_rerank.py  hybrid50.sh  init_model.py  inject_codeswitch.py  mamba50.sh  mlm_pretrain.py  nas_gpu0.sh  (+21 more)
model/hf_release/: NAMES.md  README.md  REPRODUCE.md  extract_slothe.py  gate_slothe_ternary.py  gen_golden.py  gen_web_gif.py  make_plot.py  pack_gguf.py  roles.json  run_ce_ls_32.sh  run_ternary_honest.sh  slothe_config.json  syl2legal.npz  train_slothe_ternary.py
model/slothe_4m_onnx/: config.json  model.onnx
packaging/: README.md  build-deb.sh  fetch-model.sh  install-slothd-service.sh  install-slothingd-service.sh  install-theme.sh  run-slothd.sh  run-slothingd.sh  slothd.service  slothingd.service
packaging/themes/Sloth/: theme.conf
packaging/themes/Sloth-Dark/: theme.conf
packaging/themes/Slothing/: theme.conf
packaging/themes/Slothing-Dark/: theme.conf
research/senior-ime/: RESEARCH-LOG.md
research/senior-ime/scripts/: gate_grouped.py  gate_grouped2.py  inject_key_errors.py  make_grouped2.py  make_grouped_data.py  run_crossinput.sh  run_g10t.sh  run_g21t.sh  run_grouped.sh  run_grouped_large.sh
research/senior-ime/trainer-patches/: patch_8adj.py  patch_crossinput.py  patch_distill.py  patch_snap.py
scripts/: setup-llm.sh
space/: Dockerfile  README.md  app.py  phonetic_table.tsv  requirements.txt
space-gradio/: README.md  app.py  requirements.txt
space-static/: README.md  assoc.js  assoc_tc.tsv  coi-serviceworker.js  ime.js  index.html  phonetic_table.tsv  segment.js  test-codeswitch-exhaustive.mjs  test-codeswitch.mjs  test-segment.mjs
space-static/enc/: char2id.json  slothe-mt.js  slothe-mt.wasm  slothe.js  slothe.wasm  syl_vocab.json
space-web/: README.md  app.py  ui.html
space/static/: ime.js  index.html  style.css
